Sculpt: fix T103454: SCULPT_vertex_is_occluded is not compatible with filters